--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,10 +10,12 @@
     <PackageReference Include="FluentValidation" Version="9.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.11" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Business\Concrete\" />
+    <Folder Include="Utilities\Security\Jwt\" />
   </ItemGroup>
 
 </Project>
