--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -3,7 +3,7 @@
         "Audience": "melik@melik.com",
         "Issuer": "melik@melik.com",
         "AccessTokenExpiration": 10,
-        "SecurityKey": "mysupersecretkeymysupersecretkey"
+        "securityKey": "mysupersecretkeymysupersecretkey"
     },
     "Logging": {
         "LogLevel": {
